--- a/main.css
+++ b/main.css
@@ -535,16 +535,17 @@ video {
   right: 0px;
 }
 
-.row-span-2 {
-  grid-row: span 2 / span 2;
+.m-2 {
+  margin: 0.5rem;
 }
 
-.row-span-3 {
-  grid-row: span 3 / span 3;
+.m-3 {
+  margin: 0.75rem;
 }
 
-.m-4 {
-  margin: 1rem;
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .my-2 {
@@ -568,12 +569,12 @@ video {
   display: table;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-10 {
@@ -650,16 +651,16 @@ video {
   }
 }
 
-.grid-rows-5 {
-  grid-template-rows: repeat(5, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
 }
 
 .items-center {
   align-items: center;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border-b-4 {
@@ -671,6 +672,11 @@ video {
   border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
 
+.border-red-main {
+  --tw-border-opacity: 1;
+  border-color: rgba(231, 6, 43, var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -680,9 +686,9 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-red-700 {
-  --tw-gradient-from: #b91c1c;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(185, 28, 28, 0));
+.from-red-600 {
+  --tw-gradient-from: #dc2626;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
 }
 
 .via-red-main {
@@ -693,8 +699,8 @@ video {
   --tw-gradient-to: #b91c1c;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .text-center {
@@ -731,9 +737,23 @@ video {
   display: flex;
 }
 
-.header-main{
+.header{
   box-shadow: 0px 0px 80px -20px black;
   color: var(--main-red);
+}
+
+.navBar__item{
+  box-shadow: 0px 10px 20px -20px black;
+}
+
+.navBar__item:hover{
+  border-bottom-width: 2px;
+}
+
+@media (min-width: 768px) {
+  .navBar__item {
+    box-shadow: none;
+  }
 }
 
 @media (min-width: 640px) {
@@ -746,6 +766,10 @@ video {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:flex-row {
