--- a/main.css
+++ b/main.css
@@ -527,20 +527,12 @@ video {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .right-0 {
   right: 0px;
 }
 
-.m-2 {
-  margin: 0.5rem;
-}
-
-.m-3 {
-  margin: 0.75rem;
+.m-1 {
+  margin: 0.25rem;
 }
 
 .mx-2 {
@@ -548,17 +540,9 @@ video {
   margin-right: 0.5rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .flex {
@@ -583,6 +567,12 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 @-webkit-keyframes spin {
@@ -659,17 +649,20 @@ video {
   align-items: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
 
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+.border-2 {
+  border-width: 2px;
 }
 
 .border-red-main {
@@ -677,30 +670,49 @@ video {
   border-color: rgba(231, 6, 43, var(--tw-border-opacity));
 }
 
-.bg-white {
+.border-purple-main {
+  --tw-border-opacity: 1;
+  border-color: rgba(30, 21, 42, var(--tw-border-opacity));
+}
+
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+
+.bg-platinum {
+  --tw-bg-opacity: 1;
+  background-color: rgba(232, 233, 237, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-red-600 {
-  --tw-gradient-from: #dc2626;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
+.from-platinum {
+  --tw-gradient-from: #E8E9ED;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(232, 233, 237, 0));
 }
 
 .via-red-main {
-  --tw-gradient-stops: var(--tw-gradient-from), #e7062b, var(--tw-gradient-to, rgba(231, 6, 43, 0));
+  --tw-gradient-stops: var(--tw-gradient-from), #E7062B, var(--tw-gradient-to, rgba(231, 6, 43, 0));
 }
 
-.to-red-700 {
-  --tw-gradient-to: #b91c1c;
+.to-purple-main {
+  --tw-gradient-to: #1E152A;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .text-center {
@@ -715,11 +727,6 @@ video {
   --tw-shadow: 0 0 #0000;
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 *, ::before, ::after {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
@@ -730,7 +737,13 @@ video {
 }
 
 :root{
-  --main-red: #e7062b;
+  --red-main: #E7062B;
+  --platinum: #E8E9ED;
+  --purple-main: #1E152A;
+}
+
+html{
+  background-color: var(--platinum);
 }
 
 .show{
@@ -739,20 +752,83 @@ video {
 
 .header{
   box-shadow: 0px 0px 80px -20px black;
-  color: var(--main-red);
+  color: var(--red-main);
+}
+
+.follow{
+  font-family: serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: var(--purple-main);
+}
+
+.media{
+  display: contents;
+}
+
+.social-media{
+  width: 50px;
+  height: 50px;
+  color: var(--platinum);
+}
+
+.dragon{
+  height: 50px;
+  width: 50px;
+  color: var(--red-main)
+}
+
+.burger{
+  top: 21px;
+}
+
+.burger div{
+  transition: all 0.2s ease;
+  transform-origin: 0 0;
+}
+
+.cross{
+  justify-content: space-between;
+}
+
+.cross div:nth-child(1) {
+  transform: rotate(45deg) scaleX(1.3) translate(1px, -1px);
+}
+
+.cross div:nth-child(2) {
+  transform: scaleX(0);
+}
+
+.cross div:nth-child(3) {
+  transform: rotate(-45deg) scaleX(1.3);
 }
 
 .navBar__item{
-  box-shadow: 0px 10px 20px -20px black;
+  box-shadow: 0px -5px 20px -20px black;
+  transition: all 0.8s ease;
 }
 
 .navBar__item:hover{
-  border-bottom-width: 2px;
+  color: var(--purple-main);
+}
+
+.contact-me{
+  color: var(--platinum);
+  background-color: var(--red-main);
+  transition: all 0.3s ease;
+}
+
+.contact-me:hover{
+  transform: scale(1.05)
 }
 
 @media (min-width: 768px) {
   .navBar__item {
     box-shadow: none;
+  }
+
+  .contact-me{
+    border-radius: 5rem;
   }
 }
 
