--- a/main.css
+++ b/main.css
@@ -531,8 +531,8 @@ video {
   right: 0px;
 }
 
-.m-1 {
-  margin: 0.25rem;
+.m-2 {
+  margin: 0.5rem;
 }
 
 .mx-2 {
@@ -551,6 +551,10 @@ video {
 
 .table {
   display: table;
+}
+
+.contents {
+  display: contents;
 }
 
 .hidden {
@@ -804,8 +808,7 @@ html{
 }
 
 .navBar__item{
-  box-shadow: 0px -5px 20px -20px black;
-  transition: all 0.8s ease;
+  transition: all 0.5s ease;
 }
 
 .navBar__item:hover{
@@ -815,11 +818,14 @@ html{
 .contact-me{
   color: var(--platinum);
   background-color: var(--red-main);
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
 }
 
 .contact-me:hover{
-  transform: scale(1.05)
+  transform: scale(1.05);
+  color: var(--red-main);
+  background-color: var(--platinum);
+  border: 1px solid var(--purple-main)
 }
 
 @media (min-width: 768px) {
