--- a/main.css
+++ b/main.css
@@ -543,12 +543,20 @@ video {
   bottom: 2rem;
 }
 
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
 
 .row-span-3 {
   grid-row: span 3 / span 3;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
 }
 
 .m-2 {
@@ -563,6 +571,10 @@ video {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -609,6 +621,17 @@ video {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+}
+
+.transform {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @-webkit-keyframes spin {
@@ -675,6 +698,14 @@ video {
     -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
             animation-timing-function: cubic-bezier(0,0,0.2,1);
   }
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-5 {
+  grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
 .grid-rows-6 {
@@ -787,8 +818,8 @@ video {
   text-align: center;
 }
 
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .font-bold {
@@ -808,6 +839,14 @@ video {
   --tw-ring-shadow: 0 0 #0000;
 }
 
+.transition {
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 :root{
   --red-main: #E7062B;
   --platinum: #E8E9ED;
@@ -817,6 +856,7 @@ video {
 html{
   color: var(--purple-main);
   background-color: var(--platinum);
+  font-family: serif;
 }
 
 .show{
@@ -847,7 +887,6 @@ html{
 }
 
 .follow{
-  font-family: serif;
   font-weight: bold;
   font-size: 1.5rem;
 }
@@ -916,6 +955,10 @@ html{
   z-index: 1000;
 }
 
+.back-to-top:hover{
+  cursor:pointer;
+}
+
 /* ---------------------------BACK TO TOP STYLES END------------------- */
 
 /* ------------------------- FOOTER STYLES START ------------------------- */
@@ -925,6 +968,14 @@ html{
 }
 
 /* -------------------------FOOTER STYLES END--------------------- */
+
+/* ------------------------- HOME STYLES START ------------------ */
+
+.home-dragon{
+  width: 150px;
+}
+
+/* ------------------------- HOME STYLES END ------------------ */
 
 /* ----------------------TABLET MEDIA QUERY START -------------------- */
 
