--- a/main.css
+++ b/main.css
@@ -547,6 +547,10 @@ video {
   grid-column: span 2 / span 2;
 }
 
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
@@ -571,6 +575,11 @@ video {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .block {
@@ -611,6 +620,18 @@ video {
 
 .w-14 {
   width: 3.5rem;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-full {
@@ -704,8 +725,12 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-rows-5 {
-  grid-template-rows: repeat(5, minmax(0, 1fr));
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-rows-4 {
+  grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 
 .grid-rows-6 {
@@ -714,6 +739,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -730,6 +759,22 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.justify-items-center {
+  justify-items: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -779,14 +824,14 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.from-red-500 {
+  --tw-gradient-from: #ef4444;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
+}
+
 .from-red-600 {
   --tw-gradient-from: #dc2626;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
-}
-
-.from-platinum {
-  --tw-gradient-from: #E8E9ED;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(232, 233, 237, 0));
 }
 
 .via-red-main {
@@ -822,6 +867,15 @@ video {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -853,10 +907,15 @@ video {
   --purple-main: #1E152A;
 }
 
+.loading{
+  height: calc(100vh - 140px);
+}
+
 html{
   color: var(--purple-main);
   background-color: var(--platinum);
   font-family: serif;
+  scroll-behavior: smooth;
 }
 
 .show{
@@ -972,7 +1031,15 @@ html{
 /* ------------------------- HOME STYLES START ------------------ */
 
 .home-dragon{
-  width: 150px;
+  height: 35vh;
+}
+
+.home-main{
+  height: calc(100vh - 140px);
+}
+
+.button{
+  max-width: 480px;
 }
 
 /* ------------------------- HOME STYLES END ------------------ */
@@ -980,6 +1047,10 @@ html{
 /* ----------------------TABLET MEDIA QUERY START -------------------- */
 
 @media (min-width: 768px) {
+  html{
+    font-size: 1.2rem;
+  }
+
   /* ----------------------------- HEADER STYLES START -------------------------- */
 
   .contact-me{
@@ -990,6 +1061,20 @@ html{
 }
 
 /* -------------------TABLET MEDIA QUERY END------------------------- */
+
+/* -------------------PC MEDIA QUERY START------------------------- */
+
+@media (min-width: 1024px) {
+  /* ------------------------- HOME STYLES START ------------------ */
+
+  .home-dragon{
+    height: 45vh;
+  }
+
+  /* ------------------------- HOME STYLES END ------------------ */
+}
+
+/* -------------------PC MEDIA QUERY END------------------------- */
 
 @media (min-width: 640px) {
 }
@@ -1003,8 +1088,28 @@ html{
     grid-row: span 1 / span 1;
   }
 
+  .md\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+
   .md\:row-start-2 {
     grid-row-start: 2;
+  }
+
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
+  }
+
+  .md\:w-10 {
+    width: 2.5rem;
   }
 
   .md\:grid-cols-2 {
@@ -1029,6 +1134,30 @@ html{
     grid-column: span 2 / span 2;
   }
 
+  .lg\:col-start-2 {
+    grid-column-start: 2;
+  }
+
+  .lg\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+
+  .lg\:row-span-4 {
+    grid-row: span 4 / span 4;
+  }
+
+  .lg\:row-span-5 {
+    grid-row: span 5 / span 5;
+  }
+
+  .lg\:row-start-3 {
+    grid-row-start: 3;
+  }
+
+  .lg\:row-start-5 {
+    grid-row-start: 5;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1047,6 +1176,10 @@ html{
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-5 {
+    grid-template-rows: repeat(5, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
