--- a/main.css
+++ b/main.css
@@ -611,6 +611,10 @@ video {
   height: 3.5rem;
 }
 
+.h-4\/5 {
+  height: 80%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -627,8 +631,8 @@ video {
   width: 75%;
 }
 
-.w-4\/5 {
-  width: 80%;
+.w-3\/5 {
+  width: 60%;
 }
 
 .w-full {
@@ -856,14 +860,14 @@ video {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-medium {
@@ -1187,6 +1191,16 @@ html{
   .md\:flex-row {
     flex-direction: row;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1196,10 +1210,6 @@ html{
 
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
-  }
-
-  .lg\:row-span-4 {
-    grid-row: span 4 / span 4;
   }
 
   .lg\:flex {
