--- a/main.css
+++ b/main.css
@@ -563,10 +563,6 @@ video {
   margin: 0.5rem;
 }
 
-.m-5 {
-  margin: 1.25rem;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -575,6 +571,11 @@ video {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .my-2 {
@@ -590,6 +591,11 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .my-10 {
@@ -629,8 +635,8 @@ video {
   height: 3.5rem;
 }
 
-.h-40 {
-  height: 10rem;
+.h-20 {
+  height: 5rem;
 }
 
 .h-auto {
@@ -647,10 +653,6 @@ video {
 
 .w-14 {
   width: 3.5rem;
-}
-
-.w-40 {
-  width: 10rem;
 }
 
 .w-2\/3 {
@@ -840,11 +842,6 @@ video {
   background-color: rgba(231, 6, 43, var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}
-
 .bg-purple-main {
   --tw-bg-opacity: 1;
   background-color: rgba(30, 21, 42, var(--tw-bg-opacity));
@@ -958,6 +955,11 @@ video {
   --red-main: #E7062B;
   --platinum: #E8E9ED;
   --purple-main: #1E152A;
+  --blue-main: #3b82f6;
+}
+
+.delete{
+  max-width: 1366px;
 }
 
 .loading{
@@ -976,7 +978,6 @@ main{
   margin: 0 auto;
   flex-direction: column;
   max-width: 1920px;
-  justify-content: center;
   align-items: center;
   overflow-x: hidden;
 }
@@ -988,6 +989,10 @@ main{
 .hide{
   opacity: 0;
   visibility: hidden;
+}
+
+.blue{
+  color: var(--blue-main);
 }
 
 .plat{
@@ -1144,7 +1149,6 @@ main{
 .card{
   box-shadow: 5px 10px 20px -10px var(--purple-main);
   border-radius: 1rem;
-  background-image: linear-gradient(to bottom, var(--red-main), var(--platinum));
 }
 
 /* ------------------------- HOME STYLES END ------------------ */
@@ -1308,6 +1312,11 @@ main{
 
   .lg\:row-span-5 {
     grid-row: span 5 / span 5;
+  }
+
+  .lg\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .lg\:flex {
