--- a/main.css
+++ b/main.css
@@ -539,8 +539,20 @@ video {
   right: 2rem;
 }
 
+.-right-6 {
+  right: -1.5rem;
+}
+
 .bottom-8 {
   bottom: 2rem;
+}
+
+.-bottom-2 {
+  bottom: -0.5rem;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
 .row-span-2 {
@@ -551,8 +563,16 @@ video {
   grid-row: span 3 / span 3;
 }
 
+.row-start-2 {
+  grid-row-start: 2;
+}
+
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-5 {
+  margin: 1.25rem;
 }
 
 .mx-2 {
@@ -563,6 +583,40 @@ video {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -593,12 +647,40 @@ video {
   height: 3.5rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-4\/5 {
+  height: 80%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
 
 .w-14 {
   width: 3.5rem;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-full {
@@ -609,6 +691,17 @@ video {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+}
+
+.transform {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @-webkit-keyframes spin {
@@ -677,12 +770,28 @@ video {
   }
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-rows-6 {
   grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -699,6 +808,30 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.justify-items-center {
+  justify-items: center;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
+.self-start {
+  align-self: flex-start;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-full {
@@ -729,9 +862,9 @@ video {
   background-color: rgba(231, 6, 43, var(--tw-bg-opacity));
 }
 
-.bg-purple-main {
+.bg-blue-500 {
   --tw-bg-opacity: 1;
-  background-color: rgba(30, 21, 42, var(--tw-bg-opacity));
+  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 
 .bg-platinum {
@@ -748,14 +881,14 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.from-red-500 {
+  --tw-gradient-from: #ef4444;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
+}
+
 .from-red-600 {
   --tw-gradient-from: #dc2626;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(220, 38, 38, 0));
-}
-
-.from-platinum {
-  --tw-gradient-from: #E8E9ED;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(232, 233, 237, 0));
 }
 
 .via-red-main {
@@ -778,25 +911,80 @@ video {
   padding: 0.75rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
   text-align: center;
 }
 
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 *, ::before, ::after {
   --tw-shadow: 0 0 #0000;
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 *, ::before, ::after {
@@ -808,15 +996,49 @@ video {
   --tw-ring-shadow: 0 0 #0000;
 }
 
+.transition {
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+@font-face {
+  font-family: 'styleScript';
+
+  src: url(/55b25fe3624164420924.ttf);
+}
+
 :root{
   --red-main: #E7062B;
   --platinum: #E8E9ED;
   --purple-main: #1E152A;
+  --blue-main: #3b82f6;
+}
+
+.delete{
+  max-width: 1366px;
+}
+
+.loading{
+  height: calc(100vh - 140px);
 }
 
 html{
   color: var(--purple-main);
   background-color: var(--platinum);
+  font-family: serif;
+  scroll-behavior: smooth;
+}
+
+main{
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  max-width: 1920px;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 .show{
@@ -826,6 +1048,10 @@ html{
 .hide{
   opacity: 0;
   visibility: hidden;
+}
+
+.blue{
+  color: var(--blue-main);
 }
 
 .plat{
@@ -840,6 +1066,10 @@ html{
   color: var(--purple-main);
 }
 
+.font-style{
+  font-family: 'styleScript'
+}
+
 /* ----------------------------- HEADER STYLES START -------------------------- */
 
 .header{
@@ -847,7 +1077,6 @@ html{
 }
 
 .follow{
-  font-family: serif;
   font-weight: bold;
   font-size: 1.5rem;
 }
@@ -898,12 +1127,14 @@ html{
 
 .contact-me{
   transition: all 0.5s ease;
+  box-shadow: inset 0px -10px 10px -10px var(--purple-main);
 }
 
 .contact-me:hover{
   transform: scale(1.05);
   color: var(--red-main);
-  border: 1px solid var(--purple-main)
+  border: 1px solid var(--purple-main);
+  box-shadow: 0px 10px 10px -10px var(--purple-main);
 }
 
 /* --------------------------HEADER STYLES END------------------------- */
@@ -916,6 +1147,10 @@ html{
   z-index: 1000;
 }
 
+.back-to-top:hover{
+  cursor:pointer;
+}
+
 /* ---------------------------BACK TO TOP STYLES END------------------- */
 
 /* ------------------------- FOOTER STYLES START ------------------------- */
@@ -926,9 +1161,160 @@ html{
 
 /* -------------------------FOOTER STYLES END--------------------- */
 
+/* ------------------------- HOME STYLES START ------------------ */
+
+.home-main-container{
+  max-height: 440px;
+}
+
+.home-dragon{
+  width: 40%;
+}
+
+.home-main{
+  height: calc(100vh - 140px);
+}
+
+.home-main__grid{
+  max-height: 420px;
+  max-width: 1366px;
+  display: grid;
+  grid-template: repeat(4, 25%) / 60% 40%;
+  height: 80%;
+  grid-template-areas: "title img"
+                       "info img"
+                       "info img"
+                       "button img";
+}
+
+.home-main__grid div{
+  grid-column: 1 / span 2;
+}
+
+.home-main__img{
+  grid-row-start: 1;
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  width: 100%;
+  max-width: 480px;
+}
+
+.learn-more{
+  -webkit-animation: button 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: button 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@-webkit-keyframes button {
+  0%, 100% {
+    transform: scale(1.05);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+@keyframes button {
+  0%, 100% {
+    transform: scale(1.05);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+.button:hover{
+  transform: scale(1.05);
+}
+
+.button-content{
+  box-shadow: inset 0px -10px 10px -10px var(--purple-main);
+}
+
+.card{
+  box-shadow: 5px 10px 20px -10px var(--purple-main);
+  border-radius: 1rem;
+}
+
+/* ------------------------- HOME STYLES END ------------------ */
+
+/* ------------------------- FAQ STYLES START ------------------ */
+
+.questions--list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: sticky;
+  bottom: 0;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  align-self: end;
+}
+
+/* ------------------------- FAQ STYLES START ------------------ */
+
+/* ----------------------LANDSCAPE MEDIA QUERY START -------------------- */
+
+@media (min-width: 475px) {
+  /* ------------------------- HOME STYLES START ------------------ */
+
+  .home-dragon{
+    width: 25vw;
+  }
+
+  .home-main__grid{
+    grid-gap: normal;
+  }
+
+  .home-main__grid div{
+    grid-column: auto / span 1;
+  }
+
+  .home-main__title{
+    grid-area: title;
+  }
+
+  .home-main__info{
+    grid-area: info;
+  }
+
+  .home-main__button{
+    grid-area: button;
+  }
+
+  .home-main__img{
+    grid-column-start: 2;
+    grid-area: img;
+  }
+
+  /* ------------------------- HOME STYLES END ------------------ */
+
+  /* ----------------------------- FAQ STYLES START -------------------------- */
+
+  .questions{
+    display: grid;
+    grid-template-columns: 25% auto;
+  }
+
+  /* ----------------------------- FAQ STYLES END -------------------------- */
+}
+
+/* -------------------LANDSCAPE MEDIA QUERY END------------------------- */
+
 /* ----------------------TABLET MEDIA QUERY START -------------------- */
 
 @media (min-width: 768px) {
+  html{
+    font-size: 1.2rem;
+  }
+
   /* ----------------------------- HEADER STYLES START -------------------------- */
 
   .contact-me{
@@ -936,11 +1322,55 @@ html{
   }
 
   /* ----------------------------- HEADER STYLES END -------------------------- */
+
+  /* ----------------------------- FAQ STYLES START -------------------------- */
+
+  .questions--list{
+    top: 0;
+    align-self: start;
+  }
+
+  /* ----------------------------- FAQ STYLES END -------------------------- */
 }
 
 /* -------------------TABLET MEDIA QUERY END------------------------- */
 
+/* -------------------PC MEDIA QUERY START------------------------- */
+
+@media (min-width: 1024px) {
+  /* ------------------------- HOME STYLES START ------------------ */
+
+  .home-dragon{
+    width: 75%;
+  }
+
+  /* ------------------------- HOME STYLES END ------------------ */
+}
+
+/* -------------------PC MEDIA QUERY END------------------------- */
+
+@media (min-width: 475px) {
+  .xs\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
+  .xs\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+}
+
 @media (min-width: 640px) {
+  .sm\:row-span-3 {
+    grid-row: span 3 / span 3;
+  }
+
+  .sm\:row-start-2 {
+    grid-row-start: 2;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 768px) {
@@ -956,6 +1386,22 @@ html{
     grid-row-start: 2;
   }
 
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
+  }
+
+  .md\:w-10 {
+    width: 2.5rem;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -967,15 +1413,46 @@ html{
   .md\:flex-row {
     flex-direction: row;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:col-auto {
+    grid-column: auto;
+  }
+
   .lg\:col-span-1 {
     grid-column: span 1 / span 1;
   }
 
-  .lg\:col-span-2 {
-    grid-column: span 2 / span 2;
+  .lg\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
+  .lg\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+
+  .lg\:row-span-3 {
+    grid-row: span 3 / span 3;
+  }
+
+  .lg\:row-span-5 {
+    grid-row: span 5 / span 5;
+  }
+
+  .lg\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .lg\:flex {
@@ -994,8 +1471,8 @@ html{
     width: auto;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -1004,6 +1481,18 @@ html{
 
   .lg\:justify-end {
     justify-content: flex-end;
+  }
+
+  .lg\:self-start {
+    align-self: flex-start;
+  }
+
+  .lg\:self-end {
+    align-self: flex-end;
+  }
+
+  .lg\:text-left {
+    text-align: left;
   }
 
   .lg\:shadow-none {
@@ -1019,6 +1508,10 @@ html{
 
   .xl\:justify-evenly {
     justify-content: space-evenly;
+  }
+
+  .xl\:self-center {
+    align-self: center;
   }
 }
 
