Added a bit of info in services tab

--- a/main.css
+++ b/main.css
@@ -555,12 +555,20 @@ video {
   grid-column: span 2 / span 2;
 }
 
+.col-start-1 {
+  grid-column-start: 1;
+}
+
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
 
 .row-span-3 {
   grid-row: span 3 / span 3;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
 }
 
 .row-start-2 {
@@ -619,6 +627,10 @@ video {
   display: block;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
@@ -665,6 +677,10 @@ video {
 
 .w-14 {
   width: 3.5rem;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-2\/3 {
@@ -842,6 +858,10 @@ video {
   border-width: 2px;
 }
 
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-red-main {
   --tw-border-opacity: 1;
   border-color: rgba(231, 6, 43, var(--tw-border-opacity));
@@ -977,6 +997,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .underline {
@@ -1396,6 +1420,10 @@ main{
     grid-column: span 2 / span 2;
   }
 
+  .md\:col-start-2 {
+    grid-column-start: 2;
+  }
+
   .md\:row-span-1 {
     grid-row: span 1 / span 1;
   }
@@ -1430,6 +1458,22 @@ main{
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
+  .md\:text-left {
+    text-align: left;
+  }
+
+  .md\:text-right {
+    text-align: right;
   }
 
   .md\:text-base {
